--- a/views/create.pug
+++ b/views/create.pug
@@ -27,7 +27,7 @@
             <h1 style="color: transparent;">task</h1>
             <form action="/create" class="form" method="POST" autocomplete="off">
                 <h1>CREATE YOUR TASK</h1>
-            <input type="text" name="name" id="name" placeholder="NAME">
+            <input type="text" name="name" id="name" placeholder="Your NAME">
             <input type="text" name="day" id="name" placeholder="DAY">
                 <input type="text" name="task" id="task" placeholder="TASK">
                 | FROM:<input type="time" name="from" id="time">
