--- a/views/index.html
+++ b/views/index.html
@@ -33,8 +33,9 @@
             </div>
           </section>-->
   <div class="jumbotron conta">
+    <div style="font-family: Georgia, 'Times New Roman', Times, serif;">
     <h1 class="display-4">Hello, EVERYONE!</h1>
-    <p class="lead">This is a simple TODOLIST, where you can fill your task and the timing at which u have to do it.</p>
+    <p class="lead">This is a simple TODOLIST Application, where you can fill your task and the timing at which u have to do it.</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p>
@@ -42,13 +43,16 @@
       PROPERTIES
     </a>
   </p>
+</div>
   <div class="collapse property" id="collapseExample">
     <div class="card card-body" style="background-color: transparent; border: transparent;">
+      <div style="font-family: Georgia, 'Times New Roman', Times, serif;">
       <ul>
-        <li>YOU CAN ADD YOUR TASK</li>
-        <li>YOU CAN AGAIN EDIT THAT TASK</li>
-        <li>IF YOU WANT TO REMOVE THE TASK YOU CAN REMOVE IT</li>
+        <li> YOU CAN ADD YOUR TASK </li>
+        <li> YOU CAN AGAIN EDIT YOUR EARLIER TASK </li>
+        <li> IF YOU WANT TO REMOVE THE TASK, YOU CAN REMOVE IT </li>
       </ul>
+    </div>
     </div>
   </div>
 </div>
