--- a/views/show.pug
+++ b/views/show.pug
@@ -26,11 +26,11 @@
     <table class="table table-dark  my-3">
         <thead>
             <tr>
-                <th scope="col">NAME</th>
-                <th scope="col">DAY</th>
-                <th scope="col">TASK</th>
-                <th scope="col">FROM</th>
-                <th scope="col">UPTO</th>
+                <th scope="col"> YOUR NAME </th>
+                <th scope="col"> DAY </th>
+                <th scope="col"> TASK </th>
+                <th scope="col"> FROM </th>
+                <th scope="col"> UPTO </th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
